--- a/index.html
+++ b/index.html
@@ -5,17 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Profile card component</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  Victor Crest
+  <div class="topLeftCircle">
+    <img src="images/bg-pattern-top.svg" alt="image of a circle" class="img-rounded center-block">
+  </div>
+
+  <div class="bottomRightCircle">
+  <img src="images/bg-pattern-bottom.svg" alt="image of a circle" class="img-rounded center-block">
+  </div>
+
+  <div class="card">
+    <img src="images/bg-pattern-card.svg" class="card-img-top" alt="card header">
+    <img src="images/image-victor.jpg" class="profile-photo" alt="profile photo">
+    <div class="card-body">
+      <h5><b>Victor Crest</b> 26</h5>
+      <p class="card-text">London</p>
+      <hr>
+      <table style = "width:100%">
+        <tr class="numbers">
+          <th>80K</th>
+          <th>803K</th>
+          <th>1.4K</th>
+        </tr>
+        <tr class="description">
+          <th style="font-weight: 400">Followers</th>
+          <th style="font-weight: 400">Likes</th>
+          <th style="font-weight: 400">Photos</th>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <!-- Victor Crest
   26
   London
 
@@ -26,10 +53,10 @@
   Likes
 
   1.4K
-  Photos
+  Photos -->
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <!-- Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Your Name Here</a>. -->
   </div>
 </body>
 </html>
