final commit after frontEndMentor report

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <hr>
       <table style = "width:100%">
         <tr class="numbers">
-          <th>80K</th>
-          <th>803K</th>
-          <th>1.4K</th>
+          <th id="followers">80K</th>
+          <th id="likes">803K</th>
+          <th id="photos">1.4K</th>
         </tr>
         <tr class="description">
-          <th style="font-weight: 400">Followers</th>
-          <th style="font-weight: 400">Likes</th>
-          <th style="font-weight: 400">Photos</th>
+          <td headers="followers">Followers</td>
+          <td headers="likes">Likes</td>
+          <td headers="photos">Photos</td>
         </tr>
       </table>
     </div>
@@ -54,9 +54,9 @@
 
   1.4K
   Photos -->
-  <div class="attribution">
-    <!-- Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>. -->
-  </div>
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Vitali</a>.
+  </div> -->
 </body>
 </html>
