--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<!-- Background images -->
+
   <div class="topLeftCircle">
     <img src="images/bg-pattern-top.svg" alt="image of a circle" class="img-rounded center-block">
   </div>
@@ -21,39 +24,32 @@
   <img src="images/bg-pattern-bottom.svg" alt="image of a circle" class="img-rounded center-block">
   </div>
 
-  <div class="card">
-    <img src="images/bg-pattern-card.svg" class="card-img-top" alt="card header">
-    <img src="images/image-victor.jpg" class="profile-photo" alt="profile photo">
-    <div class="card-body">
-      <h5><b>Victor Crest</b> 26</h5>
-      <p class="card-text">London</p>
-      <hr>
-      <table style = "width:100%">
-        <tr class="numbers">
-          <th id="followers">80K</th>
-          <th id="likes">803K</th>
-          <th id="photos">1.4K</th>
-        </tr>
-        <tr class="description">
-          <td headers="followers">Followers</td>
-          <td headers="likes">Likes</td>
-          <td headers="photos">Photos</td>
-        </tr>
-      </table>
+<!-- Profile Card -->
+
+  <div class="container">
+    <div class="card">
+      <img src="images/bg-pattern-card.svg" class="card-img-top" alt="card header">
+      <img src="images/image-victor.jpg" class="profile-photo" alt="profile photo">
+      <div class="card-body">
+        <h5><b>Victor Crest</b> 26</h5>
+        <p class="card-text">London</p>
+        <hr>
+        <table style = "width:100%">
+          <tr class="numbers">
+            <th id="followers">80K</th>
+            <th id="likes">803K</th>
+            <th id="photos">1.4K</th>
+          </tr>
+          <tr class="description">
+            <td headers="followers">Followers</td>
+            <td headers="likes">Likes</td>
+            <td headers="photos">Photos</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
-  <!-- Victor Crest
-  26
-  London
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos -->
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Vitali</a>.
